--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </video>
       <script>
          // Change the variables below to your liking
-         const currentURL = "TheLid.mp4";
+         const currentURL = "TheLid";
          const pageTitle = "Loading...";
          // End of changable variables
          
